[gd_scene load_steps=7 format=3 uid="uid://2ejbgm4ur5h3"]

[ext_resource type="Script" path="res://Menu.gd" id="1_xq1hh"]
[ext_resource type="Script" path="res://MenuBg.gd" id="2_p5tdk"]
[ext_resource type="Texture2D" uid="uid://cr7qgykrs56a3" path="res://runeofheal.png" id="3_psymw"]
[ext_resource type="Script" path="res://Draggable.gd" id="4_1xib8"]
[ext_resource type="Texture2D" uid="uid://hro25xwoa44g" path="res://runeofprotection.png" id="4_q71u5"]
[ext_resource type="Texture2D" uid="uid://d02aorr0d4wxs" path="res://runeofswift.png" id="5_mbxyk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq1hh")

[node name="MenuBg" type="Node2D" parent="."]
script = ExtResource("2_p5tdk")

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 1287.0
offset_top = 771.0
offset_right = 1549.0
offset_bottom = 843.0
text = "Start
"

[node name="Technique1" type="MenuButton" parent="."]
visible = false
layout_mode = 0
offset_left = 68.0
offset_top = 51.0
offset_right = 322.0
offset_bottom = 212.0
text = "Abnormal Technique:"
flat = false
item_count = 3
popup/item_0/text = "Black Hole"
popup/item_0/id = 0
popup/item_1/text = "Ghost Dogs"
popup/item_1/id = 1
popup/item_2/text = "Energy Shot"
popup/item_2/id = 2

[node name="Technique2" type="MenuButton" parent="."]
visible = false
layout_mode = 0
offset_left = 68.0
offset_top = 424.0
offset_right = 322.0
offset_bottom = 585.0
text = "Abnormal Technique:"
flat = false
item_count = 3
popup/item_0/text = "Black Hole"
popup/item_0/id = 0
popup/item_1/text = "Ghost Dogs"
popup/item_1/id = 1
popup/item_2/text = "Energy Shot"
popup/item_2/id = 2

[node name="RuneHeal" type="Sprite2D" parent="."]
position = Vector2(1395, 135)
scale = Vector2(4, 4)
texture = ExtResource("3_psymw")
script = ExtResource("4_1xib8")

[node name="RuneProtection" type="Sprite2D" parent="."]
position = Vector2(1407, 292)
scale = Vector2(4, 4)
texture = ExtResource("4_q71u5")
script = ExtResource("4_1xib8")

[node name="RuneSwift" type="Sprite2D" parent="."]
position = Vector2(1413, 459)
scale = Vector2(4, 4)
texture = ExtResource("5_mbxyk")
script = ExtResource("4_1xib8")
